# Drift

./: CMakeLists.txt  README.md  compile.sh  run.sh
include/: window_manager.h
src/: main.cpp  window_manager.cpp
